<resources>

    <!-- Project name -->
    <string name="app_name_new">Cherrity</string>
    <string name="settings">Cài đặt</string>
    <string name="check_connection">Vui lòng kiểm tra kết nối mạng</string>

    <!-- Category listing   -->
    <string-array name="category">
        <item>Fruits</item>
        <item>Vagitables</item>
        <item>Oil &amp; Masala</item>
        <item>Bakery</item>
        <item>Beverages</item>
        <item>Beauty</item>
        <item>Household</item>
        <item>Branded Foods</item>
    </string-array>

    <!-- Sign up /Register  -->
    <string name="log_in">Đăng nhập</string>
    <string name="new_here">New Here ? </string>
    <string name="sign_up">Đăng ký</string>
    <string name="forgot_psw">Quên mât khẩu</string>
    <string name="or_login_with">Hoặc đăng nhập với</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="already_have_account">Bạn đã có tài khoản?</string>
    <string name="user_name">Tên</string>
    <string name="shipPhone">Số điện thoại</string>
    <string name="shipAddress">Địa chỉ</string>
    <string name="shipInfo">Ghi chú</string>
    <string name="btn_signin">Đăng nhập</string>
    <string name="btn_signup">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="submit">Lưu</string>

    <string name="send_email">Gửi email</string>
    <string name="share_title_app">Chia sẻ qua</string>
    <string name="share_content">Summit shop - Mua sắm thật nhanh chóng, dễ dàng, tiện lợi. https://play.google.com/store/apps/details?id=com.summit.service</string>
    <string name="share_subject">Summit shop</string>

    <string name="lbl_saleOff">Khuyến mãi: </string>
    <string name="lbl_description">Thông tin chi tiết: </string>

    <!-- Drawer strings -->
    <string name="openDrawer">Navigation View Closed</string>
    <string name="closeDrawer">Navigation View</string>


    <!-- Validation Strings  -->
    <string name="val_enter_name">Vui lòng nhập tên của bạn.</string>
    <string name="val_enter_password">Vui lòng nhập mật khẩu.</string>
    <string name="val_password_greter_six">Mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="val_conf_password_greter_six">Xác nhận mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="val_enter_email">Vui lòng nhập địa chỉ email.</string>
    <string name="val_enter_valid_email">Định dạng email chưa chính xác.</string>
    <string name="val_enter_phone">Vui lòng nhập số điện thoại.</string>
    <string name="val_enter_mobile_number">Vui lòng nhập số điện thoại.</string>
    <string name="val_enter_country_code">Please select country code.</string>
    <string name="val_password_confirm_password_not_match">Mật khẩu và xác nhận mật khẩu không trùng khớp.</string>
    <string name="val_enter_user_name">Vui lòng nhập tên của bạn</string>
    <string name="val_enter_conf_password">Vui lòng nhập xác nhận mật khẩu</string>
    <string name="val_enter_addressline">Vui lòng nhập địa chỉ.</string>
    <string name="val_enter_fullname">Please enter fullname.</string>
    <string name="val_enter_address">Vui lòng nhập địa chỉ.</string>
    <string name="are_you_sure_do_you_want_to_logout">Bạn có chắc muốn thoát khỏi ứng dụng không?</string>

    <string name="invalid_phone">Số điện thoại phải là số và có từ 10 đến 11 chữ số.</string>

    <string name="error_anonymous">Có lỗi xảy ra.</string>

    <!--For Intro-->
    <string name="skip">SKIP</string>
    <string name="slide_3_title">Mua sắm nhanh chóng</string>
    <string name="slide_3_desc">tiện lợi - dễ dàng.</string>

    <!--Order and payment scree string-->
    <string name="edit">Edit</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="start_shoping">Bắt đầu mua hàng</string>
    <string name="pro_payment">Thanh toán</string>
    <string name="btn_submit">Lưu</string>
    <string name="btn_craeteNewAddress">Create New Address</string>
    <string name="add_address">Add Address</string>



    <!-- product detail & Add shipAddress string-->
    <string name="home_delivery">Home Delivery</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="your_email">Your email</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="save_this_address_as">Save this shipAddress as</string>


    <!-- Login screen facebook & google string  -->
    <string name="login_with_facebook">Login with facebook.</string>
    <string name="login_with_google_plus">Login with Google.</string>

    <!-- Intro content -->
    <string name="enjoy_easy_way_ordering">Mua sắm thật dễ dàng</string>
    <string name="best_quality_ever">Chất lượng tuyệt vời</string>
    <string name="title_activity_menu">MenuActivity</string>



    <!--Navigation slidemenu string-->
    <string name="nav_menu_home">Trang chủ</string>
    <string name="nav_menu_my_cart">Giỏ hàng</string>
    <string name="nav_menu_my_address">My Address</string>
    <string name="nav_menu_my_order">My Order</string>
    <string name="nav_menu_about_us">Về chúng tôi</string>
    <string name="nav_menu_contact">Liên hệ</string>
    <string name="nav_menu_rate_us">Rate Us</string>
    <string name="nav_menu_logout">Đăng xuất</string>
    <string name="nav_menu_share">Chia sẻ</string>
    <string name="nav_menu_notification">Notification</string>


    <!--All lable-->
    <string name="check_out_now">Thanh toán</string>
    <string name="your_cart_is_empty">Giở hàng trống!</string>
    <string name="shipped">Shipped</string>
    <string name="order">Đặt hàng</string>
    <string name="name">Name :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="pincode">Pincode :</string>
    <string name="address_lbl">Address :</string>
    <string name="delivery">Thông tin giao hàng</string>
    <string name="select_delivery_date">Delivery date</string>
    <string name="select_delivery_time">Delivery time</string>
    <string name="total_items">Tổng số sản phẩm :</string>
    <string name="total_amount">Tổng tiền :</string>
    <string name="lbl_continue">Tiếp tục</string>
    <string name="address_added_success">Address saved successfully.</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="delivery_date_time">Delivery Date / Time</string>
    <string name="order_now">Đặt hàng ngay</string>
    <string name="total_items_and_amount">Total items and Amount</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="amount">Amount:</string>
    <string name="your_order_successfully">Đặt hàng thành công.</string>
    <string name="lio_jorge">Lio Jorge</string>
    <string name="lio_jorge_gmail_com">lio.jorge@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="sub_total">Tổng tiền</string>
    <string name="select_address">Select Address</string>
    <string name="fresh_fruits_veggies"><![CDATA[Mọi thứ bạn cần]]></string>
    <string name="delivered_to_your_home">Vận chuyển đến tận cửa nhà bạn</string>
    <string name="dolar">đ</string>
    <string name="kg">Kg</string>


    <!--Temp user data-->
    <string name="leo_jorge">Leo Jorge</string>
    <string name="lio_jorge_gmail">lio.jorge@gmail.com</string>
    <string name="temp_number">+1 8005892365</string>
    <string name="temp_date">10/10/2018 10:10 PM</string>
    <string name="jems_le">Jems Le</string>
    <string name="_1_5874126589">+1 5874126589</string>
    <string name="temp_pin">556677</string>
    <string name="califonia_usa">Califonia,USA</string>
    <string name="temp_items">10</string>
    <string name="temp_amount">$112</string>
    <string name="_12">$12</string>
    <string name="temp_total_amt">$100</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="description_data">Lorem Ipsum is simply dummy text of the printing and typesetting industry.dummy text of the printing and typesetting industry electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software Why do we use it?It is a long established fact that a reader will be distracted.</string>


</resources>
