<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home_selector"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/menu_cart_selector"
            android:title="@string/nav_menu_my_cart" />
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/menu_address_selector"
            android:title="@string/nav_menu_my_address" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/menu_order_selector"
            android:title="@string/nav_menu_my_order" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/menu_notification_selector"
            android:title="@string/nav_menu_notification" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/menu_aboutus_selector"
            android:title="@string/nav_menu_about_us" />


    </group>

    <item android:title="Communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/menu_share_selector"
                android:title="@string/nav_menu_share" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_menu_logout" />



        </menu>
    </item>

</menu>
