<com.grocery.service.comman.SlidingLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_payment_llContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_weight="1"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <com.grocery.service.customecomponent.CustomTextView
                    android:id="@+id/fragment_payment_tvDate"
                    style="@style/ganaral_primarystyle"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:text="@string/delivery_date_time"
                    app:font_name="UBUNTU-BOLD.TTF" />


                <com.grocery.service.customecomponent.CustomTextView
                    style="@style/ganaral_greystyle"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/_3sdp"
                    android:text="@string/temp_date"
                    app:font_name="UBUNTU-MEDIUM.TTF" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <com.grocery.service.customecomponent.CustomTextView
                    style="@style/ganaral_primarystyle"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ivOrder"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/delivery_address"
                    app:font_name="UBUNTU-BOLD.TTF" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/name"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvName"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/jems_le"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/mobile_no"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvMobile"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/_1_5874126589"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/pincode"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvPincode"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/temp_pin"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/address_lbl"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvAddress"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/califonia_usa"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <com.grocery.service.customecomponent.CustomTextView
                    style="@style/ganaral_primarystyle"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ivOrder"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/total_items_and_amount"
                    app:font_name="UBUNTU-BOLD.TTF" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/total_items"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvItems"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/temp_items"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/amount"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvAmount"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:text="@string/temp_amount"
                        android:paddingStart="@dimen/_5sdp"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/delivery_charge"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvDeliveryCharge"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/_12"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">


                    <com.grocery.service.customecomponent.CustomTextView
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/total_amount"
                        app:font_name="UBUNTU-BOLD.TTF" />


                    <com.grocery.service.customecomponent.CustomTextView
                        android:id="@+id/fragment_payment_tvTotalAmount"
                        style="@style/ganaral_greystyle"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/ivOrder"
                        android:text="@string/temp_total_amt"
                        android:paddingStart="@dimen/_5sdp"
                        app:font_name="UBUNTU-MEDIUM.TTF" />


                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_payment_rlOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimary">


        <com.grocery.service.customecomponent.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:text="@string/order_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:font_name="UBUNTU-MEDIUM.TTF" />


    </RelativeLayout>


</com.grocery.service.comman.SlidingLinearLayout>
